took away sign in button tag and adjusted vh of distances

--- a/public/index.html
+++ b/public/index.html
@@ -61,9 +61,9 @@
                 <p id="userNameError"></p>
                 <input onClick="clearErrors()" id="passwordInput" type="password" name="password" placeholder="Password">
                 <p id="passwordError"></p>
-                <button type="submit" id="logInButtonLoginPage">
-                    <img id="logInButtonLoginPageImage" src="LoginButtonLoginPage.png">
-                </button>
+                
+                    <img type="submit" id="logInButtonLoginPageImage" type="submit" src="LoginButtonLoginPage.png">
+        
                 <br>
             </form>
 
