took away type submit from login

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                 <input onClick="clearErrors()" id="passwordInput" type="password" name="password" placeholder="Password">
                 <p id="passwordError"></p>
                 
-                    <img type="submit" id="logInButtonLoginPageImage" type="submit" src="LoginButtonLoginPage.png">
+                    <img id="logInButtonLoginPageImage" src="LoginButtonLoginPage.png">
         
                 <br>
             </form>
