looking pretty good

--- a/public/scorecard.html
+++ b/public/scorecard.html
@@ -90,9 +90,9 @@
                                 
                             </tr>
                             <tr>
-                                <td id="distanceToBack" class="align-middle">300</td>
-                                <td id="distanceToCenter" class="align-middle">300</td>
-                                <td id="distanceToFront" class="align-middle">300</td>
+                                <td id="distanceToFront" class="align-middle">---</td>
+                                <td id="distanceToCenter" class="align-middle">---</td>
+                                <td id="distanceToBack" class="align-middle">---</td>
                             </tr>
 
                         </thead>
@@ -260,7 +260,6 @@
                         <th scope="col" id="numberHole7">7</th>
                         <th scope="col" id="numberHole8">8</th>
                         <th scope="col" id="numberHole9">9</th>
-                        <th scope="col" id="TotalsFrontNine">In</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -274,8 +273,7 @@
                         <td id="parHole6"></td>
                         <td id="parHole7"></td>
                         <td id="parHole8"></td>
-                        <td id="parHole9"></td>
-                        <td id="parHoleTotalFrontNine"></td>
+                        <td id="parHole9"></td>             
                     </tr>
                     <tr id="frontNineYardage">
                         <th scope="row">Yardage</th>
@@ -287,8 +285,7 @@
                         <td id="yardHole6"></td>
                         <td id="yardHole7"></td>
                         <td id="yardHole8"></td>
-                        <td id="yardHole9"></td>
-                        <td id="yardHoleTotalFrontNine"></td>
+                        <td id="yardHole9"></td>        
                     </tr>
                     <tr id="frontNineHandicap">
                         <th scope="row">Handicap</th>
@@ -300,8 +297,7 @@
                         <td id="handicapHole6"></td>
                         <td id="handicapHole7"></td>
                         <td id="handicapHole8"></td>
-                        <td id="handicapHole9"></td>
-                        <td id="handicapTotalFrontNine"></td>
+                        <td id="handicapHole9"></td>               
                     </tr>
                     <tr id="frontNineScore">
                         <th scope="row">Score</th>
@@ -313,8 +309,7 @@
                         <td id="scoreHole6"></td>
                         <td id="scoreHole7"></td>
                         <td id="scoreHole8"></td>
-                        <td id="scoreHole9"></td>
-                        <td id="scoreHoleTotalFrontNine"></td>
+                        <td id="scoreHole9"></td>               
                     </tr>
                     <tr id="frontNinePutts">
                         <th scope="row">Putts</th>
@@ -326,8 +321,7 @@
                         <td id="puttsHole6"></td>
                         <td id="puttsHole7"></td>
                         <td id="puttsHole8"></td>
-                        <td id="puttsHole9"></td>
-                        <td id="puttsTotalFrontNine"></td>
+                        <td id="puttsHole9"></td>                  
                     </tr>
                     <tr id="frontNineFairwaysHit">
                         <th scope="row">Fairway</th>
@@ -339,8 +333,7 @@
                         <td id="fairwayHole6"></td>
                         <td id="fairwayHole7"></td>
                         <td id="fairwayHole8"></td>
-                        <td id="fairwayHole9"></td>
-                        <td id="fairwayTotalFrontNine"></td>
+                        <td id="fairwayHole9"></td>               
                     </tr>
                     <tr id="frontNineGIR">
                         <th scope="row">GIR</th>
@@ -352,8 +345,7 @@
                         <td id="girHole6"></td>
                         <td id="girHole7"></td>
                         <td id="girHole8"></td>
-                        <td id="girHole9"></td>
-                        <td id="girTotalFrontNine"></td>
+                        <td id="girHole9"></td>          
                     </tr>
                 </tbody>
             </table>
@@ -371,8 +363,7 @@
                         <th scope="col" id="numberHole15">15</th>
                         <th scope="col" id="numberHole16">16</th>
                         <th scope="col" id="numberHole17">17</th>
-                        <th scope="col" id="numberHole18">18</th>
-                        <th scope="col" id="totalsBackNine">Out</th>
+                        <th scope="col" id="numberHole18">18</th>       
                     </tr>
                 </thead>
                 <tbody>
@@ -386,8 +377,7 @@
                         <td id="parHole15"></td>
                         <td id="parHole16"></td>
                         <td id="parHole17"></td>
-                        <td id="parHole18"></td>
-                        <td id="parHoleTotalBackNine"></td>
+                        <td id="parHole18"></td> 
                     </tr>
                     <tr id="backNineYardage">
                         <th scope="row">Yardage</th>
@@ -399,8 +389,7 @@
                         <td id="yardHole15"></td>
                         <td id="yardHole16"></td>
                         <td id="yardHole17"></td>
-                        <td id="yardHole18"></td>
-                        <td id="yardageTotalBackNine"></td>
+                        <td id="yardHole18"></td>           
                     </tr>
                     <tr id="backNineHandicap">
                         <th scope="row">Handicap</th>
@@ -412,9 +401,9 @@
                         <td id="handicapHole15"></td>
                         <td id="handicapHole16"></td>
                         <td id="handicapHole17"></td>
-                        <td id="handicapHole18"></td>
-                        <td id="handicapTotalBackNine"></td>
+                        <td id="handicapHole18"></td>                
                     </tr>
+
                     <tr id="backNineScore">
                         <th scope="row">Score</th>
                         <td id="scoreHole10"></td>
@@ -425,8 +414,19 @@
                         <td id="scoreHole15"></td>
                         <td id="scoreHole16"></td>
                         <td id="scoreHole17"></td>
-                        <td id="scoreHole18"></td>
-                        <td id="scoreTotalBackNine"></td>
+                        <td id="scoreHole18"></td>       
+                    </tr>
+                    <tr id="backNinePutts">
+                            <th scope="row">Putts</th>
+                            <td id="puttsHole10"></td>
+                            <td id="puttsHole11"></td>
+                            <td id="puttsHole12"></td>
+                            <td id="puttsHole13"></td>
+                            <td id="puttsHole14"></td>
+                            <td id="puttsHole15"></td>
+                            <td id="puttsHole16"></td>
+                            <td id="puttsHole17"></td>
+                            <td id="puttsHole18"></td>            
                     </tr>
                     <tr id="backNineFairwaysHit">
                         <th scope="row">Fairway</th>
@@ -438,8 +438,7 @@
                         <td id="fairwayHole15"></td>
                         <td id="fairwayHole16"></td>
                         <td id="fairwayHole17"></td>
-                        <td id="fairwayHole18"></td>
-                        <td id="fairwayTotalBackNine"></td>
+                        <td id="fairwayHole18"></td>                 
                     </tr>
                     <tr id="backNineGIR">
                         <th scope="row">GIR</th>
@@ -451,21 +450,7 @@
                         <td id="girHole15"></td>
                         <td id="girHole16"></td>
                         <td id="girHole17"></td>
-                        <td id="girHole18"></td>
-                        <td id="girTotalBackNine"></td>
-                    </tr>
-                    <tr id="backNinePutts">
-                        <th scope="row">Putts</th>
-                        <td id="puttsHole10"></td>
-                        <td id="puttsHole11"></td>
-                        <td id="puttsHole12"></td>
-                        <td id="puttsHole13"></td>
-                        <td id="puttsHole14"></td>
-                        <td id="puttsHole15"></td>
-                        <td id="puttsHole16"></td>
-                        <td id="puttsHole17"></td>
-                        <td id="puttsHole18"></td>
-                        <td id="puttsTotalBackNine"></td>
+                        <td id="girHole18"></td>                     
                     </tr>
                 </tbody>
             </table>
@@ -550,7 +535,6 @@
         buildThePage(courseObject);
     }
 
-
     let scorecard = {
         "course": currentCourse,
         "userName": currentUser,
@@ -598,13 +582,23 @@
         updateHole()
     }
 
+    function clearScoreInput() {
+        $('.scoreWhite').css('opacity', '1')
+        $('.puttsWhite').css('opacity', '1')
+        $('.fairway').css('opacity', '1')
+        $('.greens').css('opacity', '1')
+    }
+
     function updateHole() {
+        clearScoreInput()
         updateScorecard()
         document.getElementById('holeNumberForMap').textContent = index + 2;
+        if(index == 17){
+            showScorecard();
+        } else {
         index++
         currentHole = golfCourseArray[index]
-        document.getElementById('courseImage').setAttribute('src', courseObject.holes[currentHole].img)
-
+        document.getElementById('courseImage').setAttribute('src', courseObject.holes[currentHole].img)}
     }
 
     function updateScorecard() {
